// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCode renders correctly with default values 1`] = `
.emotion-1 {
  border: solid 1px #dce1eb;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #dce1eb;
}

.emotion-1::-moz-placeholder {
  color: #dce1eb;
}

.emotion-1:-ms-input-placeholder {
  color: #dce1eb;
}

.emotion-1::placeholder {
  color: #dce1eb;
}

<div
  className="sui-box emotion-0"
>
  <input
    className="emotion-1"
    data-id={0}
    disabled={false}
    id="verification-code-0"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    className="emotion-1"
    data-id={1}
    disabled={false}
    id="verification-code-1"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    className="emotion-1"
    data-id={2}
    disabled={false}
    id="verification-code-2"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    className="emotion-1"
    data-id={3}
    disabled={false}
    id="verification-code-3"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
</div>
`;

exports[`VerificationCode renders correctly with initial value and placeholder and 6 fields 1`] = `
.emotion-1 {
  border: solid 1px #dce1eb;
  font-size: 24px;
  color: #4a4f62;
  text-align: center;
  border-radius: 4px;
  margin-right: 8px;
  width: 56px;
  height: 64px;
}

.emotion-1:last-child {
  margin-right: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #dce1eb;
}

.emotion-1::-moz-placeholder {
  color: #dce1eb;
}

.emotion-1:-ms-input-placeholder {
  color: #dce1eb;
}

.emotion-1::placeholder {
  color: #dce1eb;
}

<div
  className="sui-box emotion-0"
>
  <input
    className="emotion-1"
    data-id={0}
    disabled={false}
    id="verification-code-0"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="0"
    required={false}
    type="tel"
    value="1"
  />
  <input
    className="emotion-1"
    data-id={1}
    disabled={false}
    id="verification-code-1"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="0"
    required={false}
    type="tel"
    value="3"
  />
  <input
    className="emotion-1"
    data-id={2}
    disabled={false}
    id="verification-code-2"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="3"
    required={false}
    type="tel"
    value=""
  />
  <input
    className="emotion-1"
    data-id={3}
    disabled={false}
    id="verification-code-3"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder="7"
    required={false}
    type="tel"
    value=""
  />
  <input
    className="emotion-1"
    data-id={4}
    disabled={false}
    id="verification-code-4"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
  <input
    className="emotion-1"
    data-id={5}
    disabled={false}
    id="verification-code-5"
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="[0-9]*"
    placeholder=""
    required={false}
    type="tel"
    value=""
  />
</div>
`;
